--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h2>ABOUT <span>US</span></h2>
                 <div class="about-wrapper">
                     <div class="about-image">
-                        <img src="/img/couple-2179256_1920.jpg" alt="Hiking Adventure">
+                        <img src="https://images.unsplash.com/photo-1551632811-561732d1e306?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&w=673&h=450" alt="Hiking Adventure">
                         <div class="image-border"></div>
 
                     </div>
@@ -91,7 +91,7 @@
                     <h2 class="tour-title">FEATURED <span>TOURS</span></h2>
                     <div class="tour-wrapper">
                         <div class="Tour-date"> 
-                            <img src="/img/norway-4970081_1920.jpg" alt="Tour Adventure">
+                            <img src="https://images.unsplash.com/photo-1623128199051-33d23e177b0b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=forma&w=673&h=450" alt="Tour Adventure">
                             <div class="date-container">
                                 <h2>August 14th, 2022</h2>
                             </div>
@@ -106,7 +106,7 @@
                             </div>
                         </div>
                         <div class="Tour-date"> 
-                            <img src="/img/castle-7766794_1920.jpg" alt="Tour Adventure">
+                            <img src="https://images.unsplash.com/photo-1585357214259-f977cc7d73a4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=673&h=450" alt="Tour Adventure">
                             <div class="date-container">
                                 <h2>August 14th, 2022</h2>
                             </div>
@@ -121,7 +121,7 @@
                             </div>
                         </div>
                         <div class="Tour-date"> 
-                            <img src="/img/peak-190053_1920.jpg" alt="Tour Adventure">
+                            <img src="https://images.unsplash.com/photo-1536599018102-9f803c140fc1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=673&h=450" alt="Tour Adventure">
                             <div class="date-container">
                                 <h2>August 14th, 2022</h2>
                             </div>
@@ -136,7 +136,7 @@
                             </div>
                         </div>
                         <div class="Tour-date"> 
-                            <img src="/img/nature-3125910_1920.jpg" alt="Tour Adventure">
+                            <img src="https://images.unsplash.com/photo-1489392191049-fc10c97e64b6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&w=673&h=450" alt="Tour Adventure">
                             <div class="date-container">
                                 <h2>August 14th, 2022</h2>
                             </div>
