Updatew new Page About Us  Added Gallery

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </h1>
         <nav class="nav">
             <ul class="nav-list">
-                <li class="links"><a href="Home">Home</a></li>
-                <li class="links"><a href="About">About</a></li>
-                <li class="links"><a href="Services">Services</a></li>
-                <li class="links"><a href="Gallery">Gallery</a></li>
+                <li class="links"><a href="index.html">Home</a></li>
+                <li class="links"><a href="about.html">About</a></li>
+                <li class="links"><a href="index.html#services">Services</a></li>
+                <li class="links"><a href="index.html#gallery">Gallery</a></li>
             </ul>
         </nav>   
         <div class="icons">
@@ -43,7 +43,6 @@
                     <div class="about-image">
                         <img src="https://images.unsplash.com/photo-1551632811-561732d1e306?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&w=673&h=450" alt="Hiking Adventure">
                         <div class="image-border"></div>
-
                     </div>
                     <div class="about-info">
                         <h3>EXPLORE THE DIFFERENCE</h3>
@@ -53,7 +52,7 @@
                     </div>
                 </div>
         </section>
-        <section class="services">
+        <section id="services" class="services">
             <div class="container">
                 <h2 class="section-title">OUR <span>SERVICES</span></h2>
                 <div class="services-wrapper">
